prodMetadata/src/objects/COV_Access_Profile_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used to control who is able to be automatically switched to the profile that confers COV access</description>
    <fields>
        <fullName>Allow_members_of_Campaign__c</fullName>
        <description>Enter the name or ID of the campaign that contains contacts who are allowed to be automatically switched to the profile that gives them access to COV.</description>
        <inlineHelpText>Enter the name or ID of the campaign that contains contacts who are allowed to be automatically switched to the profile that gives them access to COV.</inlineHelpText>
        <label>Allow members of Campaign(Name or ID)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allowed_relationship_types_to_COVuser__c</fullName>
        <description>Semicolon-separated list of relationship-types to an existing member which would enable member to be given permission set for access to COV.</description>
        <inlineHelpText>Semicolon-separated list of relationship-types to an existing member which would enable member to be given permission set for access to COV.</inlineHelpText>
        <label>Allowed relationship types to COVuser</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorized_member_categories__c</fullName>
        <description>Semicolon-separated list of member categories who are allowed to be automatically switched to the profile that gives them access to COV (spelling must match Member Categories formula values on Contact object)</description>
        <inlineHelpText>Semicolon-separated list of member categories who are allowed to be automatically switched to the profile that gives them access to COV (spelling must match Member Categories formula values on Contact object)</inlineHelpText>
        <label>Authorized member categories</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prefix_for_COV_Access_Permission_Sets__c</fullName>
        <defaultValue>&quot;COV Access&quot;</defaultValue>
        <description>Permission sets that grant COV access should all start with the same prefix, e.g. &quot;COV Access - Internal&quot; and &quot;COV Access - Overage High Volume Customer Portal&quot;. In those cases the prefix is &quot;COV Access&quot;.</description>
        <inlineHelpText>Permission sets that grant COV access should all start with the same prefix, e.g. &quot;COV Access - Internal&quot; and &quot;COV Access - Overage High Volume Customer Portal&quot;. In those cases the prefix is &quot;COV Access&quot;.</inlineHelpText>
        <label>Prefix for COV Access Permission Sets</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>COV Access Profile Settings</label>
</CustomObject>